--- a/DQD.Core/project.json
+++ b/DQD.Core/project.json
@@ -1,7 +1,8 @@
 ﻿{
   "dependencies": {
     "Edi.UWP.Helpers": "1.0.11",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0"
+    "HtmlAgilityPack.NetCore": "1.5.0.1",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2"
   },
   "frameworks": {
     "uap10.0": {}
