--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -124,7 +124,8 @@
     <Compile Include="Helpers\SettingsConstants.cs" />
     <Compile Include="Helpers\SettingsHelper.cs" />
     <Compile Include="Helpers\StaticResources.cs" />
-    <Compile Include="Models\HomeListModel.cs" />
+    <Compile Include="Models\HeaderModel.cs" />
+    <Compile Include="Models\ContentListModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DataProcess.cs" />
     <Compile Include="Tools\DelegateCommand.cs" />
