--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -116,6 +116,8 @@
     </Compile>
     <Compile Include="DataVirtualization\IncrementalLoading.cs" />
     <Compile Include="DataVirtualization\IncrementalLoadingBase.cs" />
+    <Compile Include="Models\PageContentModels\ContentImages.cs" />
+    <Compile Include="Models\PageContentModels\ContentStrings.cs" />
     <Compile Include="Models\DataHandler.cs" />
     <Compile Include="Helpers\CacheConstants.cs" />
     <Compile Include="Helpers\CacheHelpers.cs" />
@@ -126,6 +128,7 @@
     <Compile Include="Helpers\StaticResources.cs" />
     <Compile Include="Models\HeaderModel.cs" />
     <Compile Include="Models\ContentListModel.cs" />
+    <Compile Include="Models\PageContentModels\PageContentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\DataProcess.cs" />
     <Compile Include="Tools\DelegateCommand.cs" />
