--- a/DQD/DQD.Net.csproj
+++ b/DQD/DQD.Net.csproj
@@ -122,6 +122,7 @@
     <None Include="DQD_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\38565-105.jpg" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
