--- a/DQD.Core/project.json
+++ b/DQD.Core/project.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "Edi.UWP.Helpers": "1.0.11",
     "HtmlAgilityPack.NetCore": "1.5.0.1",
+    "ImageLib.UWP": "5.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2"
   },
   "frameworks": {
