--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -123,6 +123,8 @@
     <Compile Include="DataVirtualization\IncrementalLoadingBase.cs" />
     <Compile Include="Models\CommentModels\AllCommentModel.cs" />
     <Compile Include="Models\CommentModels\CommentModel.cs" />
+    <Compile Include="Models\MatchModels\MatchGroup.cs" />
+    <Compile Include="Models\MatchModels\MatchListModel.cs" />
     <Compile Include="Models\PageContentModels\ContentFlashs.cs" />
     <Compile Include="Models\PageContentModels\ContentGifs.cs" />
     <Compile Include="Models\PageContentModels\ContentImages.cs" />
@@ -136,14 +138,16 @@
     <Compile Include="Helpers\SettingsHelper.cs" />
     <Compile Include="Helpers\StaticResources.cs" />
     <Compile Include="Models\HeaderModel.cs" />
-    <Compile Include="Models\ContentListModel.cs" />
+    <Compile Include="Models\HomeModels\ContentListModel.cs" />
     <Compile Include="Models\PageContentModels\ContentVideos.cs" />
     <Compile Include="Models\PageContentModels\PageContentModel.cs" />
     <Compile Include="Models\ParameterNavigate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools\AlphaKeyGroup.cs" />
     <Compile Include="Tools\DataProcess.cs" />
     <Compile Include="Tools\DelegateCommand.cs" />
     <Compile Include="Tools\ExceptionHandlingSynchronizationContext.cs" />
+    <Compile Include="Tools\GetAlphaKeyGroup.cs" />
     <Compile Include="Tools\ItemConverter.cs" />
     <Compile Include="Tools\MessageToken.cs" />
     <Compile Include="Tools\StatusBarInit.cs" />
