--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -142,6 +142,9 @@
     <Compile Include="Models\PageContentModels\ContentVideos.cs" />
     <Compile Include="Models\PageContentModels\PageContentModel.cs" />
     <Compile Include="Models\ParameterNavigate.cs" />
+    <Compile Include="Models\TeamModels\LeagueModel.cs" />
+    <Compile Include="Models\TeamModels\TeamLeagueModel.cs" />
+    <Compile Include="Models\TeamModels\TopOrBottom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\AlphaKeyGroup.cs" />
     <Compile Include="Tools\DataProcess.cs" />
