--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -144,14 +144,15 @@
     <Compile Include="Models\ParameterNavigate.cs" />
     <Compile Include="Models\TeamModels\LeagueModel.cs" />
     <Compile Include="Models\TeamModels\TeamLeagueModel.cs" />
-    <Compile Include="Models\TeamModels\TopOrBottom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\AlphaKeyGroup.cs" />
+    <Compile Include="Tools\Converters\TeamModelConverter.cs" />
+    <Compile Include="Tools\Converters\TopOrBottomConverter.cs" />
     <Compile Include="Tools\DataProcess.cs" />
     <Compile Include="Tools\DelegateCommand.cs" />
     <Compile Include="Tools\ExceptionHandlingSynchronizationContext.cs" />
     <Compile Include="Tools\GetAlphaKeyGroup.cs" />
-    <Compile Include="Tools\ItemConverter.cs" />
+    <Compile Include="Tools\Converters\ItemConverter.cs" />
     <Compile Include="Tools\MessageToken.cs" />
     <Compile Include="Tools\StatusBarInit.cs" />
     <Compile Include="Tools\WebProcess.cs" />
