--- a/DQD/DQD.Net.csproj
+++ b/DQD/DQD.Net.csproj
@@ -199,6 +199,10 @@
       <Project>{5607d571-b077-41dc-a02b-0dfed98e13b0}</Project>
       <Name>DQD.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\XPShadow\XPShadow.csproj">
+      <Project>{ed346d43-316a-43f2-9c1a-7caf467f9ed8}</Project>
+      <Name>XPShadow</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <SDKReference Include="WindowsMobile, Version=10.0.10586.0">
