--- a/XPShadow/project.json
+++ b/XPShadow/project.json
@@ -1,11 +1,7 @@
 ﻿{
   "dependencies": {
-    "Edi.UWP.Helpers": "1.0.11",
-    "HtmlAgilityPack.NetCore": "1.5.0.1",
-    "ImageLib.UWP": "5.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Newtonsoft.Json": "9.0.1",
-    "XPButton": "0.1.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Win2D.uwp": "1.6.0"
   },
   "frameworks": {
     "uap10.0": {}
