--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -107,6 +107,7 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionContext\DQDCollectionContext.cs" />
     <Compile Include="Controls\BasePage.cs" />
     <Compile Include="Controls\CommentPanel.xaml.cs">
       <DependentUpon>CommentPanel.xaml</DependentUpon>
@@ -143,6 +144,7 @@
     <Compile Include="Models\PageContentModels\PageContentModel.cs" />
     <Compile Include="Models\ParameterNavigate.cs" />
     <Compile Include="Models\TeamModels\LeagueModel.cs" />
+    <Compile Include="Models\TeamModels\SoccerMemberModel.cs" />
     <Compile Include="Models\TeamModels\TeamLeagueModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\AlphaKeyGroup.cs" />
