--- a/DQD/DQD.Net.csproj
+++ b/DQD/DQD.Net.csproj
@@ -138,8 +138,6 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\bg5.jpg" />
-    <Content Include="Assets\bg1.jpg" />
     <Content Include="Assets\bg2.jpg" />
     <Content Include="Assets\bg3.jpg" />
     <Content Include="Assets\bg4.jpg" />
@@ -148,6 +146,7 @@
     <Content Include="Assets\bg7.jpg" />
     <Content Include="Assets\dqd01.jpg" />
     <Content Include="Assets\Square310x310Logo.scale-400.png" />
+    <Content Include="Assets\Square44x44Logo.targetsize-48_altform-unplated.png" />
     <Content Include="Assets\title.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
