--- a/DQD/DQD.Net.csproj
+++ b/DQD/DQD.Net.csproj
@@ -22,7 +22,7 @@
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxPackageDir>C:\Users\miao1\Desktop\</AppxPackageDir>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
-    <AppxBundlePlatforms>arm</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
     <AppxBundle>Always</AppxBundle>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
@@ -138,12 +138,18 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\bg1.jpg" />
+    <Content Include="Assets\bg10.jpg" />
+    <Content Include="Assets\bg11.jpg" />
+    <Content Include="Assets\bg12.jpg" />
     <Content Include="Assets\bg2.jpg" />
     <Content Include="Assets\bg3.jpg" />
     <Content Include="Assets\bg4.jpg" />
+    <Content Include="Assets\bg5.jpg" />
     <Content Include="Assets\bg8.jpg" />
     <Content Include="Assets\bg6.jpg" />
     <Content Include="Assets\bg7.jpg" />
+    <Content Include="Assets\bg9.jpg" />
     <Content Include="Assets\dqd01.jpg" />
     <Content Include="Assets\Square310x310Logo.scale-400.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-48_altform-unplated.png" />
