--- a/DQD.Core/DQD.Core.csproj
+++ b/DQD.Core/DQD.Core.csproj
@@ -156,11 +156,12 @@
     <Compile Include="Tools\Converters\TopOrBottomConverter.cs" />
     <Compile Include="Tools\DataProcess.cs" />
     <Compile Include="Tools\DelegateCommand.cs" />
-    <Compile Include="Tools\EmojiExpressions\EmojiReplace.cs" />
+    <Compile Include="Tools\PersonalExpressions\EmojiReplace.cs" />
     <Compile Include="Tools\ExceptionHandlingSynchronizationContext.cs" />
     <Compile Include="Tools\GetAlphaKeyGroup.cs" />
     <Compile Include="Tools\Converters\ItemConverter.cs" />
     <Compile Include="Tools\MessageToken.cs" />
+    <Compile Include="Tools\PersonalExpressions\EscapeReplace.cs" />
     <Compile Include="Tools\StatusBarInit.cs" />
     <Compile Include="Tools\WebProcess.cs" />
     <EmbeddedResource Include="Properties\DQD.Core.rd.xml" />
