--- a/DQD/DQD.Net.csproj
+++ b/DQD/DQD.Net.csproj
@@ -132,6 +132,7 @@
       <DependentUpon>WebLivePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIHelpers\TilesHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
